build 3 changes by meet and nen